@@ -75,4 +75,8 @@
 - Bugfix: FlapDockStationFactory did not read layout correctly when Dockables were missing
 - API: Many factories divided in two parts. Part 1 is the factory, part 2 is the "layout". A layout is snapshot of some data. Factories can read and write layouts from/to streams and xml files. Factories can convert layouts into the original data.
 - API: Support for xml, intended for debugging purposes.
-- Bugfix: SplitDockStation fired dockableAdding/Added-Event to often.   
+- Bugfix: SplitDockStation fired dockableAdding/Added-Event to often.
+
+[Beta v1.1]
+- API: DefaultkeyBoardController renamed to DefaultKeyboardController
+- Doc: Correction for GlassedPane and OverpaintablePanel    
